--- a/chat-app-client/package.json
+++ b/chat-app-client/package.json
@@ -14,10 +14,13 @@
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20.14.6",
