--- a/chat-app-server/package.json
+++ b/chat-app-server/package.json
@@ -2,10 +2,10 @@
   "name": "chat-app-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
