--- a/chat-app-client/package.json
+++ b/chat-app-client/package.json
@@ -20,6 +20,7 @@
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-notification-badge": "^1.5.1",
     "react-router-dom": "^6.23.1",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.7.5"
