--- a/chat-app-server/.env
+++ b/chat-app-server/.env
@@ -5,4 +5,4 @@ ACCESS_TOKEN_EXPIRY = 1d
 REFRESH_TOKEN_SECRET = 234erwerwer
 REFRESH_TOKEN_EXPIRY = 10d
 NODE_ENV = production
-TIMEOUT_DURATION = 300000; // 5 minutes timeout duration
+TIMEOUT_DURATION = 60000; 
