--- a/chat-app-client/package.json
+++ b/chat-app-client/package.json
@@ -22,6 +22,7 @@
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-lottie": "^1.2.4",
     "react-notification-badge": "^1.5.1",
     "react-router-dom": "^6.23.1",
     "recoil": "^0.7.7",
@@ -32,6 +33,7 @@
     "@types/node": "^20.14.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-lottie": "^1.2.10",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
